# Renderer

./: CMakeLists.txt  LICENSE  README.md
include/: tga.h  util.h
src/: main.cpp  tga.cpp  util.cpp
